# QuantStack

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_HANDOFF.md  Cargo.toml  PHASE_D_PLAN.md  README.md  REFACTOR_PLAN.md  START_HERE.md  env.sh  package-stack.sh  smoke-check.sh
crates/quant-fetcher/: Cargo.toml
crates/quant-fetcher/src/: main.rs
crates/quant-fetcher/src/fetcher/: finnhub.rs  http.rs  mod.rs
crates/quant-stack-cli/: Cargo.toml
crates/quant-stack-cli/src/: main.rs  us_daily.rs
crates/quant-stack-py/: Cargo.toml  README.md  pyproject.toml  quant_stack_py.pyi
crates/quant-stack-py/src/: lib.rs
quant-research-cn/: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.yaml  spec.md
quant-research-cn/.claude/skills/debug-pipeline/: SKILL.md
quant-research-cn/.claude/skills/review-analytics/: SKILL.md
quant-research-cn/.claude/skills/verify-data/: SKILL.md
quant-research-cn/.claude/workflows/: add-data-source.md  daily-pipeline.md  implement-analytics-module.md
quant-research-cn/bridge/: akshare_bridge.py  requirements.txt
quant-research-cn/docs/: AXIOMS.md  DATA_SOURCES.md  DESIGN.md  EXECUTION_ALPHA.md  PIPELINE_STORAGE.md  STAR_MARKET.md  STRATEGY_PARAMS.md
quant-research-cn/docs/superpowers/archive/: 2026-04-09-report-pipeline-redesign-spec.md
quant-research-cn/docs/superpowers/plans/: 2026-04-09-report-pipeline-redesign.md
quant-research-cn/prompts/: event-analyst.md  macro-analyst.md  merge-agent.md  quant-analyst.md  risk-analyst.md
quant-research-cn/scripts/: analyze_000060.py  build_agent_context.py  daily_pipeline.sh  entry_analysis_000060.py  generate_charts.py  precompute_alpha.sh  run_agents.sh  send_email.py  sync_strategy_ev_report.py  validate_report_consistency.py  volume_price_000060.py  weekly_payload.py  weekly_pipeline.sh
quant-research-cn/src/: config.rs  main.rs  strategy_params.rs
quant-research-cn/src/analytics/: algorithm_postmortem.rs  announcement.rs  bayes.rs  breakout.rs  continuation_vs_fade.rs  flow.rs  flow_audit.rs  headline_gate.rs  hmm.rs  limit_move_radar.rs  limit_up_model.rs  macro_gate.rs  mean_reversion.rs  mod.rs  momentum.rs  open_execution_gate.rs  paper_trade_ev.rs  price_features.rs  report_review.rs  rv.rs  sector_rotation.rs  setup_alpha.rs  shadow_calibration.rs  shadow_option.rs  shadow_option_alpha_calibration.rs  unlock.rs  vol_hmm.rs
quant-research-cn/src/enrichment/: llm.rs  mod.rs  news.rs  themes.rs
quant-research-cn/src/fetcher/: akshare.rs  http.rs  mod.rs
quant-research-cn/src/fetcher/tushare/: event.rs  flow.rs  fundamental.rs  macro_cn.rs  market.rs  mod.rs  prices.rs  universe.rs
quant-research-cn/src/filtering/: mod.rs  notable.rs
quant-research-cn/src/reporting/: mod.rs  render.rs
quant-research-cn/src/storage/: mod.rs  schema.rs
quant-research-v1/: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
quant-research-v1/docs/: Agents.md  EXECUTION_ALPHA.md  PIPELINE_STORAGE.md  UPGRADE_PLAN.md  agents.yaml  codex-upgrade-review.yaml  math_axioms.py
quant-research-v1/prompts/: us-event-analyst.md  us-macro-analyst.md  us-merge-agent.md  us-news-analyst.md  us-options-analyst.md  us-quant-analyst.md  us-risk-analyst.md
quant-research-v1/rust/: Cargo.toml
quant-research-v1/rust/src/: main.rs
quant-research-v1/rust/src/fetcher/: fred.rs  polymarket.rs  sec_edgar.rs
quant-research-v1/rust/src/storage/: duckdb.rs
quant-research-v1/scripts/: backfill_ai_infra_options.py  backfill_report_review.py  backtest_signals.py  build_agent_context.py  cron_watchdog.py  fetch_event_options.py  rank_event_option_spreads.py  rerender_report_from_db.py  run_agents.sh  run_daily.py  run_full.sh  run_weekly.sh  send_alert.py  send_report.py  split_payload.py  sync_action_plan_report.py  sync_factor_lab_report.py  weekly_payload.py
quant-research-v1/src/quant_bot/: __init__.py
quant-research-v1/src/quant_bot/analytics/: ai_infra_universe.py  algorithm_postmortem.py  bayes.py  breakout.py  clustering.py  cn_log_denoise_backtest.py  cn_observed_lifecycle_prob.py  cn_opportunity_ranker.py  contradictions.py  covariance.py  dividend_dip_score.py  earnings_risk.py  event_study.py  granger.py  hmm_regime.py  kalman_beta.py  mean_reversion.py  momentum_risk.py  news_quality.py  options_alpha.py  overnight_continuation_alpha.py  overnight_gate.py  pairs.py  portfolio_risk.py  report_review.py  risk_params.py  scorecard.py  sentiment_ewma.py  us_opportunity_ranker.py  value_score.py  variance_premium.py
quant-research-v1/src/quant_bot/config/: settings.py  strategy_params.py
quant-research-v1/src/quant_bot/data_ingestion/: dividends.py  earnings.py  fundamentals.py  macro.py  market_quotes.py  options.py  prices.py  symbols.py
quant-research-v1/src/quant_bot/delivery/: gmail.py
quant-research-v1/src/quant_bot/filtering/: _common.py  _events_loader.py  _options_loader.py  _options_scorer.py  _price_loader.py  _price_signals_loader.py  _ranking.py  _scorers.py  _sentiment_loader.py  notable.py
quant-research-v1/src/quant_bot/orchestration/: watchdog.py
quant-research-v1/src/quant_bot/reporting/: _bundle_extremes.py  _bundle_screens.py  _bundle_tier1.py  _render_charts.py  _render_context.py  _render_extremes.py  _render_fmt.py  _render_insights.py  _render_item_data.py  _render_item_events.py  _render_item_header.py  _render_screens.py  bundle.py  charts.py  paths.py  (+3 more)
quant-research-v1/tests/: test_ai_infra_universe.py  test_algorithm_postmortem.py  test_cn_book_overlay.py  test_cn_observed_lifecycle_prob.py  test_cn_opportunity_ranker.py  test_cron_watchdog.py  test_event_option_spread_ranker.py  test_factor_lab_integration.py  test_main_strategy_v2_backtest.py  test_momentum_log_features.py  test_my_book_overlay.py  test_options_alpha.py  test_options_chain_quotes.py  test_options_expiry_selection.py  test_options_rate_limit.py  test_options_verdicts.py  test_overnight_gate.py  test_setup_alpha_render.py  test_strategy_backtest_gate.py  test_sync_action_plan_report.py  test_temporal_asof.py  test_us_opportunity_ranker.py  test_weekly_payload.py
(+507 files in other folders)
