[workspace]
members = [
    "crates/quant-stack-core",
    "crates/quant-stack-cli",
    "crates/quant-stack-py",
    "crates/quant-fetcher",
]
exclude = [
    "quant-research-cn",
    "factor-lab/rust-bootstrap",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
duckdb = { version = "1.1", features = ["bundled"] }
pyo3 = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-util = { version = "0.7", features = ["time"] }
