[package]
name = "quant-cn"
version = "0.1.0"
edition = "2021"
description = "A-share quantitative research pipeline — pure Rust"

[[bin]]
name = "quant-cn"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
duckdb      = { version = "1.1", features = ["bundled"] }
clap        = { version = "4", features = ["derive", "env"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
ndarray     = "0.16"
statrs      = "0.17"                # Beta distribution, statistical functions
nalgebra    = "0.33"                # Linear algebra (Ledoit-Wolf, PCA)
polars      = { version = "0.46", features = ["lazy", "csv", "json"] }

[profile.release]
opt-level = 3
lto = "thin"
