[package]
name = "quant-stack-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quant-stack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
quant-stack-core = { path = "../quant-stack-core" }
