[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "quant-stack-py"
version = "0.1.0"
description = "Thin Python bindings for quant-stack-core"
requires-python = ">=3.10"

[tool.maturin]
module-name = "quant_stack_py"
features = ["extension-module"]
include = ["quant_stack_py.pyi"]
