[package]
name = "quant-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quant-fetcher"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", features = ["json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
duckdb      = { version = "1.1", features = ["bundled"] }
clap        = { version = "4", features = ["derive", "env"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"
tokio-util  = { version = "0.7", features = ["time"] }
chrono      = { version = "0.4", features = ["serde"] }
